tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type.rs:2:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error[E0277]: the trait bound `Add::{synthetic#0}: Compat` is not satisfied
  --> $DIR/assoc-type.rs:41:15
   |
LL |     type Qux: Add;
   |               ^^^ the trait `Compat` is not implemented for `Add::{synthetic#0}`
   |
help: consider further restricting the associated type
   |
LL | trait Baz where Add::{synthetic#0}: Compat {
   |           ++++++++++++++++++++++++++++++++

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
